--- a/src/pages/Company/style.css
+++ b/src/pages/Company/style.css
@@ -58,10 +58,15 @@
 
 .company .profile-img {
   height: 100px;
-  width: 100%;
+  width: 100px;
   display: flex;
   align-items: center;
   justify-content: center;
+  background: #fff;
+  border-radius: 10px;
+  /* padding-bottom: 40px; */
+  box-sizing: border-box;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
 
 .profile-img .overlap-group {
