fix: Calc 왼쪽 정렬

--- a/src/pages/Calc/style.css
+++ b/src/pages/Calc/style.css
@@ -145,3 +145,14 @@
     font-size: 14px;
     line-height: 140%;
 }
+
+
+.rule {
+  text-align: left;
+}
+
+.rule-subtitle,
+.rule-result,
+.result-desc {
+  text-align: left;
+}
