--- a/src/components/Carousel/style.css
+++ b/src/components/Carousel/style.css
@@ -2,7 +2,6 @@
 
 .carousel-container{
   width: 600px;
-  background-color: #9055FF;
   overflow-y: hidden;
   height: fit-content;
   display: flex;
@@ -25,6 +24,7 @@
 
 #carousel {
   overflow: hidden; /* 넘치는 부분 숨김 */
+  background-image: url('./../../assets/Banner/title.png');
 }
 
 .carousel-container {
