--- a/src/components/Carousel/style.css
+++ b/src/components/Carousel/style.css
@@ -25,6 +25,8 @@
 #carousel {
   overflow: hidden; /* 넘치는 부분 숨김 */
   background-image: url('./../../assets/Banner/title.png');
+  background-size: 600px 180px;
+
 }
 
 .carousel-container {
