--- a/src/pages/ManageCompany/style.css
+++ b/src/pages/ManageCompany/style.css
@@ -4,6 +4,10 @@
   border: 1px solid aqua;
 } */
 
+body {
+  font-family: "Pretendard Variable", Helvetica;
+  /* 기본적으로 sans-serif 폰트를 백업으로 사용합니다. */
+}
 
 .main {
   background-color: #11052e;
