--- a/src/pages/ManageCompany/style.css
+++ b/src/pages/ManageCompany/style.css
@@ -7,6 +7,7 @@
 body {
   font-family: "Pretendard Variable", Helvetica;
   /* 기본적으로 sans-serif 폰트를 백업으로 사용합니다. */
+  word-break: keep-all;
 }
 
 .main {
