--- a/src/pages/Main/style.css
+++ b/src/pages/Main/style.css
@@ -12,6 +12,8 @@
     padding-bottom: 300px;
   }
   
+  
+
   .main .main-image {
     height: 180px !important;
     left: 0 !important;
@@ -578,3 +580,14 @@
     color: var(--highlightbackground);
   }
   
+
+
+  .main  .stock-price-zero {
+    font-family: var(--heading-h5-font-family);
+    font-size: 18px;
+    font-style: var(--heading-h5-font-style);
+    font-weight: var(--heading-h5-font-weight);
+    letter-spacing: var(--heading-h5-letter-spacing);
+    line-height: var(--heading-h5-line-height);
+    color:var(--neutraldarklight);
+}
